--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,8 @@ AllCops:
     - crypto_gost.gemspec
     - Rakefile
     - bin/test.rb
-    - lib/crypto_gost/modular_arithmetic.rb
+    - lib/crypto_gost/digital_signature_gost_12/modular_arithmetic.rb
+    - lib/crypto_gost/digital_signature_gost_12/group/**/*
     - spec/**/*
 
 Metrics/LineLength:
